--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include COPYING
 include doc/Makefile doc/curatheme/theme.conf doc/conf.py doc/*.rst doc/pic/*.dia doc/_static/*
-include mof/cura-storage.mof mof/cura-storage.sfcb.reg mof/cura-storage.pegasus.reg
+include mof/cura-storage.mof mof/cura-storage.reg
 include client/client-highlevel.py
+include tools/register.sh tools/reg2pegasus.py
