Rename the MOF file to match LMI prefix.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include COPYING CHANGES
 include doc/Makefile doc/curatheme/theme.conf doc/conf.py doc/*.rst doc/pic/*.dia doc/_static/*
-include mof/cura-storage.mof mof/cura-storage.reg
+include mof/LMI_Storage.mof mof/LMI_Storage.reg
 include client/client-highlevel.py
 include tools/register.sh tools/reg2pegasus.py
