--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,9 @@
 include COPYING CHANGES
-include doc/Makefile doc/openlmitheme/theme.conf doc/conf.py doc/*.rst doc/pic/*.dia doc/_static/*
-include mof/LMI_Storage.mof mof/LMI_Storage.reg
+include doc/admin/Makefile doc/admin/conf.py doc/admin/*.rst doc/admin/pic/*.uml 
+include doc/admin/_static/* doc/admin/pic/*.dia doc/admin/openlmitheme/theme.conf
+include doc/admin/generated/Makefile doc/admin/mof/Makefile doc/admin/mof/header.txt
+include mof/*.mof mof/LMI_Storage.reg
 include client/client-highlevel.py
-include tools/register.sh tools/reg2pegasus.py
+include test/tools/*
+recursive-include test/unit *.py
+recursive-include test/unit/config/configs *
