Added LVM documentation.

--- a/doc/admin/Makefile
+++ b/doc/admin/Makefile
@@ -53,7 +53,8 @@ figures: pic/partitions.png \
     pic/intro-setting.svg \
     pic/intro-service.svg \
     pic/partition-instance.svg \
-    pic/raid5-instance.svg
+    pic/raid5-instance.svg \
+    pic/lvm-instance.svg
 
 mof:
 	make -C mof
